membuat home page

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
     <!-- my css -->
     <link rel="stylesheet" href="style.css">
     <title>alfachri</title>
@@ -12,11 +13,11 @@
     <header class="header">
         <div class="container">
             <nav class="nav">
-                <a href="#">alfachri.</a>
+                <a class="logo" href="#">alfachri.</a>
                 <div class="nav-menu">
                     <ul class="nav-list">
                         <li class="nav-item">
-                            <a href="#home">About</a>
+                            <a href="#about">About</a>
                         </li>
                         <li class="nav-item">
                             <a href="#experience">Experience</a>
@@ -27,14 +28,34 @@
                         <li class="nav-item">
                             <a href="#contact">Contact</a>
                         </li>
+                        <i class="bi bi-moon"></i>
                     </ul>
-                </div>
-                <div class="mode">
-                    <a href=""></a>
                 </div>
             </nav>
         </div>
     </header>
-    <h2>alfachri</h2>
+    <!-- HOME -->
+    <div class="container center">
+        <div id="home">
+                        <div class="img">
+                            <img src="assets/img/avatar-1.svg" alt="">
+                        </div>
+                        <div class="text">
+                            <div class="text-con">
+                            <p>Hello I'm</p>
+                            <h1>alfachri</h1>
+                            <h2>Frontend Developer</h2>
+                            <div class="btns">
+                                <button class="btn-cv" target="_blank" href="https://www.instagram.com/alfachriii__">Download CV</button>
+                                <button class="btn-con" target="_blank" href="https://www.instagram.com/alfachriii__">Contact Info</button>
+                            </div>
+                            </div>
+                            <div class="icon">
+                            <a class="bi bi-github" target="_blank" href="https://github.com/alfachriii/"></a>
+                            <a class="bi bi-instagram" target="_blank" href="https://www.instagram.com/alfachriii__"></a>
+                            </div>
+                        </div>
+        </div>
+    </div>
 </body>
 </html>
