membuat page about

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     <div class="container center">
         <div id="home">
                         <div class="img">
-                            <img src="assets/img/avatar-1.svg" alt="">
+                            <img src="assets/img/profile-pic.svg" alt="">
                         </div>
                         <div class="text">
                             <div class="text-con">
@@ -55,6 +55,30 @@
                             <a class="bi bi-instagram" target="_blank" href="https://www.instagram.com/alfachriii__"></a>
                             </div>
                         </div>
+        </div>
+    </div>
+    <div class="container">
+        <div id="about">
+            <p>Get To Know More</p>
+            <h1>About Me</h1>
+            <div class="con-about">
+                <div class="img">
+                    <img src="assets/img/profile-pic2.JPG" alt="">
+                </div>
+                <div class="con-box">
+                        <div class="box-expe">
+                            <i class="bi bi-trophy-fill"></i>
+                            <h2>Experience</h2>
+                            <p><center>6+ months Frontend Development</center></p>
+                        </div>
+                        <div class="box-edu">
+                            <i class="bi bi-people-fill"></i>
+                            <h2>Education</h2>
+                            <p>Junior High School</p>
+                        </div>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui, quia? Iure asperiores assumenda necessitatibus minus exercitationem molestiae illo eum deserunt iste, quisquam laudantium ipsum perferendis libero dolores atque enim odio. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quaerat harum fugiat nesciunt dolore nihil.</p>
+                </div>
+            </div>
         </div>
     </div>
 </body>
