--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/fontawesome.min.css">
     <!-- my css -->
     <link rel="stylesheet" href="style.css">
     <title>alfachri</title>
@@ -77,6 +78,96 @@
                             <p>Junior High School</p>
                         </div>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui, quia? Iure asperiores assumenda necessitatibus minus exercitationem molestiae illo eum deserunt iste, quisquam laudantium ipsum perferendis libero dolores atque enim odio. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quaerat harum fugiat nesciunt dolore nihil.</p>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="container">
+        <div id="experience">
+            <p><center>Explore My</center></p>
+            <h1>Experience</h1>
+            <div class="con-box">
+                <div class="box-experience">
+                    <h2>Frontend Development</h2>
+                    <div class="box-content">
+                        <div class="box-item">
+                            <img src="assets/icon/checkmark.png" alt="">
+                            <div>
+                                <h3>HTML</h3>
+                                <h4>Intermadiate</h4>
+                            </div>
+                        </div>
+                        <div class="box-item">
+                            <img src="assets/icon/checkmark.png" alt="">
+                            <div>
+                                <h3>CSS</h3>
+                                <h4>Intermadiate</h4>
+                            </div>
+                        </div>
+                        <div class="box-item">
+                            <img src="assets/icon/checkmark.png" alt="">
+                            <div>
+                                <h3>JavaScript</h3>
+                                <h4>Basic</h4>
+                            </div>
+                        </div>
+                        <!-- <div class="box-item">
+                            <img src="assets/icon/checkmark.png" alt="">
+                            <div>
+                                <h3>Ajax</h3>
+                                <h4>Learning</h4>
+                            </div>
+                        </div> -->
+                        <div class="box-item">
+                            <img src="assets/icon/checkmark.png" alt="">
+                            <div>
+                                <h3>TypeScript</h3>
+                                <h4>Being Studied</h4>
+                            </div>
+                        </div>
+                        <div class="box-item">
+                            <img src="assets/icon/checkmark.png" alt="">
+                            <div>
+                                <h3>Material UI</h3>
+                                <h4>Being Studied</h4>
+                            </div>
+                        </div>
+                        
+                    </div>
+                </div>
+                <div class="box-experience">
+                    <h2>Frontend Development</h2>
+                    <div class="box-content">
+                        <div class="box-item">
+                            <img src="assets/icon/checkmark.png" alt="">
+                            <div>
+                                <h3>MySQL</h3>
+                                <h4>Being Studied</h4>
+                            </div>
+                        </div>
+                        <div class="box-item">
+                            <img src="assets/icon/checkmark.png" alt="">
+                            <div>
+                                <h3>Node JS</h3>
+                                <h4>Being Studied</h4>
+                            </div>
+                        </div>
+                        <div class="box-item">
+                            <img src="assets/icon/checkmark.png" alt="">
+                            <div>
+                                <h3>Express JS</h3>
+                                <h4>Being Studied</h4>
+                            </div>
+                        </div>
+                        <div class="box-item">
+                            <img src="assets/icon/checkmark.png" alt="">
+                            <div>
+                                <h3>React JS</h3>
+                                <h4>Basic</h4>
+                            </div>
+                        </div>
+                        
+                    </div>
                 </div>
             </div>
         </div>
