membuat 'projects' page

--- a/index.html
+++ b/index.html
@@ -172,5 +172,36 @@
             </div>
         </div>
     </div>
+    <!-- project -->
+    <div id="projects">
+        <p><center>Browse My Recent</center></p>
+        <h1>Projects</h1>
+        <div class="container">
+            <div class="box-project">
+                <img src="assets/img/comingsoon.png" alt="">
+                <h2>Project One</h2>
+                <div class="btns-project">
+                    <button class="btn-cv" target="_blank" href="">Github</button>
+                    <button class="btn-cv" target="_blank" href="">Live Demo</button>
+                </div>
+            </div>
+            <div class="box-project">
+                <img src="assets/img/comingsoon.png" alt="">
+                <h2>Project One</h2>
+                <div class="btns-project">
+                    <button class="btn-cv" target="_blank" href="">Github</button>
+                    <button class="btn-cv" target="_blank" href="">Live Demo</button>
+                </div>
+            </div>
+            <div class="box-project">
+                <img src="assets/img/comingsoon.png" alt="">
+                <h2>Project One</h2>
+                <div class="btns-project">
+                    <button class="btn-cv" target="_blank" href="">Github</button>
+                    <button class="btn-cv" target="_blank" href="">Live Demo</button>
+                </div>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
