--- a/index.html
+++ b/index.html
@@ -2,11 +2,13 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/fontawesome.min.css">
     <!-- my css -->
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="responsive.css">
     <title>alfachri</title>
 </head>
 <body>
@@ -39,13 +41,13 @@
     <div class="container center">
         <div id="home">
                         <div class="img">
-                            <img src="assets/img/profile-pic.svg" alt="">
+                            <img src="assets/img/20231025_175434.png" alt="">
                         </div>
                         <div class="text">
                             <div class="text-con">
                             <p>Hello I'm</p>
                             <h1>alfachri</h1>
-                            <h2>Frontend Developer</h2>
+                            <h2>Normaly Human</h2>
                             <div class="btns">
                                 <button class="btn-cv" target="_blank" href="https://www.instagram.com/alfachriii__">Download CV</button>
                                 <button class="btn-con" target="_blank" href="https://www.instagram.com/alfachriii__">Contact Info</button>
@@ -173,6 +175,7 @@
         </div>
     </div>
     <!-- project -->
+    <div class="container">
     <div id="projects">
         <p><center>Browse My Recent</center></p>
         <h1>Projects</h1>
@@ -202,6 +205,7 @@
                 </div>
             </div>
         </div>
+    </div>
     </div>
 </body>
 </html>
