--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
         </div>
     </div>
     <div class="container">
-        <div id="about">
+    <div id="about">
             <p>Get To Know More</p>
             <h1>About Me</h1>
             <div class="con-about">
@@ -85,7 +85,7 @@
         </div>
     </div>
     <div class="container">
-        <div id="experience">
+    <div id="experience">
             <p><center>Explore My</center></p>
             <h1>Experience</h1>
             <div class="con-box">
@@ -179,7 +179,7 @@
     <div id="projects">
         <p><center>Browse My Recent</center></p>
         <h1>Projects</h1>
-        <div class="container">
+        <div class="experience-details-container">
             <div class="box-project">
                 <img src="assets/img/comingsoon.png" alt="">
                 <h2>Project One</h2>
@@ -206,6 +206,21 @@
             </div>
         </div>
     </div>
+    </div>
+    <div id="contact">
+        <p><center>Get In Touch</center></p>
+        <h1>Contact Me</h1>
+        <!-- <div class="container"> -->
+            <div class="box-contact">
+                <span class="bi bi-envelope"></span>
+                <a href="mailto:muhamadalfachri78@gmail.com" target="_blank">muhamadalfachri78@gmail.com</a>
+            </div>
+        <!-- </div> -->
+    </div>
+    <div class="containter">
+        <footer>
+            <p>Copyright &#169; 2023 alfachri. All Rights Reserved.</p>
+        </footer>
     </div>
 </body>
 </html>
