--- a/index.html
+++ b/index.html
@@ -15,10 +15,13 @@
     <!-- navbar -->
     <header class="header">
         <div class="container">
-            <nav class="nav">
+            <div class="nav">
                 <a class="logo" href="#">alfachri.</a>
                 <div class="nav-menu">
                     <ul class="nav-list">
+                        <li class="btn-close">
+                                <i class="bi bi-x"></i>
+                        </li>
                         <li class="nav-item">
                             <a href="#about">About</a>
                         </li>
@@ -31,10 +34,15 @@
                         <li class="nav-item">
                             <a href="#contact">Contact</a>
                         </li>
-                        <i class="bi bi-moon"></i>
                     </ul>
+                        <div class="mode">
+                            <i class="bi bi-moon"></i>
+                        </div>
+                        <div id="hamburger">
+                            <span class="bi bi-list" onclick="toggleMenu()"></span>
+                        </div>
                 </div>
-            </nav>
+            </div>
         </div>
     </header>
     <!-- HOME -->
@@ -222,5 +230,6 @@
             <p>Copyright &#169; 2023 alfachri. All Rights Reserved.</p>
         </footer>
     </div>
+    <script src="main.js"></script>
 </body>
 </html>
