--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                 <div class="nav-menu">
                     <ul class="nav-list">
                         <li class="btn-close">
-                                <i class="bi bi-x"></i>
+                                <a class="bi bi-x"></a>
                         </li>
                         <li class="nav-item">
                             <a href="#about">About</a>
@@ -36,10 +36,10 @@
                         </li>
                     </ul>
                         <div class="mode">
-                            <i class="bi bi-moon"></i>
+                            <a class="bi bi-brightness-high-fill" id="themeToggle"></a>
                         </div>
                         <div id="hamburger">
-                            <span class="bi bi-list" onclick="toggleMenu()"></span>
+                            <a class="bi bi-list" onclick="toggleMenu()"></a>
                         </div>
                 </div>
             </div>
