--- a/index.html
+++ b/index.html
@@ -54,11 +54,11 @@
                         <div class="text">
                             <div class="text-con">
                             <p>Hello I'm</p>
-                            <h1>alfachri</h1>
-                            <h2>Normaly Human</h2>
+                            <h1>Muhamad Al Fachri</h1>
+                            <h2>TKJ Stundents</h2>
                             <div class="btns">
-                                <button class="btn-cv" target="_blank" href="https://www.instagram.com/alfachriii__">Download CV</button>
-                                <button class="btn-con" target="_blank" href="https://www.instagram.com/alfachriii__">Contact Info</button>
+                                <button class="btn-cv" target="_blank" href="https://www.instagram.com/alsseeeee">Download CV</button>
+                                <button class="btn-con" target="_blank" href="https://www.instagram.com/alsseeeee">Contact Info</button>
                             </div>
                             </div>
                             <div class="icon">
@@ -85,7 +85,7 @@
                         <div class="box-edu">
                             <i class="bi bi-people-fill"></i>
                             <h2>Education</h2>
-                            <p>Junior High School</p>
+                            <p>Vocational High School</p>
                         </div>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui, quia? Iure asperiores assumenda necessitatibus minus exercitationem molestiae illo eum deserunt iste, quisquam laudantium ipsum perferendis libero dolores atque enim odio. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quaerat harum fugiat nesciunt dolore nihil.</p>
                 </div>
