--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                         <div class="text">
                             <div class="text-con">
                             <p>Hello I'm</p>
-                            <h1>Muhamad Al Fachri</h1>
+                            <h1>alFachri</h1>
                             <h2>TKJ Stundents</h2>
                             <div class="btns">
                                 <button class="btn-cv" target="_blank" href="https://www.instagram.com/alsseeeee">Download CV</button>
