--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                             </div>
                             <div class="icon">
                             <a class="bi bi-github" target="_blank" href="https://github.com/alfachriii/"></a>
-                            <a class="bi bi-instagram" target="_blank" href="https://www.instagram.com/alfachriii__"></a>
+                            <a class="bi bi-instagram" target="_blank" href="https://www.instagram.com/alsseeeee"></a>
                             </div>
                         </div>
         </div>
@@ -87,7 +87,7 @@
                             <h2>Education</h2>
                             <p>Vocational High School</p>
                         </div>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui, quia? Iure asperiores assumenda necessitatibus minus exercitationem molestiae illo eum deserunt iste, quisquam laudantium ipsum perferendis libero dolores atque enim odio. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quaerat harum fugiat nesciunt dolore nihil.</p>
+                    <p>Hello! My name is <strong>Muhamad Al Fachri</strong>, a passionate IT student focused on learning new technologies. I specialize in web development, especially React, and I enjoy building efficient and clean solutions.</p>
                 </div>
             </div>
         </div>
